--- a/.projectrc
+++ b/.projectrc
@@ -1,2 +1,2 @@
 export PATH="/home/hja40/Desktop/cuda/cuda_9.0/bin/:$PATH"
-export LD_LIBRARY_PATH="/home/hja40/Desktop/cuda/cuda_9.0/lib64/"
+export LD_LIBRARY_PATH="/home/hja40/Desktop/cuda/cuda_9.0/lib64/:$LD_LIBRARY_PATH"
